# tso-scraper

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-image.yaml  ci.yaml
dev_credentials/: localhost.crt  localhost.key  rootCA.crt  rootCA.key  rootCA.srl
protobuf/: recipe.proto
src/tso_api/: __init__.py  db_test.py
src/tso_api/db_models/: recipe.py
src/tso_scraper/: __init__.py  cache.py  config.py  dependencies.py  main.py  recipe_scraper.py
src/tso_scraper/scrape/: route.py  service.py
