[project]
name = "tso-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
