[project]
name = "tso-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "recipe-scrapers>=15.1.0",
    "redis[hiredis]>=5.1.0",
    "regex>=2024.7.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.4",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q000", "Q003", "COM812", "ISC001", "ANN", "INP001", "D", "PGH003", "W191", "E111", "E114", "E117", "Q001", "Q002", "COM819", "ISC001", "ISC002", "E501"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff]
line-length = 100
required-version = ">=0.5.0"

