[project]
name = "tso-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio-reflection>=1.68.0",
    "grpcio>=1.68.0",
    "httpx[http2]>=0.27.0",
    "protobuf>=5.28.3",
    "recipe-scrapers>=15.1.0",
    "redis[hiredis]>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tso_scraper"]

[tool.uv]
dev-dependencies = [
    "grpcio-tools>=1.68.0",
    "ruff>=0.7.4",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q000", "Q003", "COM812", "ISC001", "ANN", "INP001", "D", "PGH003", "W191", "E111", "E114", "E117", "Q001", "Q002", "COM819", "ISC001", "ISC002", "E501"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff]
line-length = 100
required-version = ">=0.5.0"
exclude = ["src/tso_scraper/generated"]

[tool.pyright]
exclude = ["src/tso_scraper/generated", ".venv"]

